fix spacing issue in part component

--- a/src/app/part/part.component.scss
+++ b/src/app/part/part.component.scss
@@ -21,9 +21,9 @@
   }
 
   &__buttonGroup {
-    margin-bottom: 10px;
+    margin-bottom: auto;
     overflow-y: auto;
-    padding: 0 20px;
+    padding: 5px 20px 10px;
   }
 
   &__button {
@@ -31,6 +31,7 @@
   }
 
   &__footer {
+    margin-top: 10px;
     min-width: 100%;
   }
 }
